css/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  background: url("../img/background.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  letter-spacing: 0.2em;
}
/* Dark-mode/night background*/
[data-bs-theme="dark"] body {
  background: url("../img/dark_bg_svg.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
/* Site container */
.container {
  max-width: 900px;
}

[data-bs-theme="dark"] .forecastTableContainer *,
tbody {
  background-color: #495057;
}
[data-bs-theme="dark"] .mainWeatherContainer {
  background-color: #495057;
}

.mainWeatherContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas: "mainLeft mainRight";
}
.mainLeft {
  border-right: 1px solid lightgray;
  grid-area: mainLeft;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  flex-direction: column;
}

.mainRight {
  grid-area: mainRight;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

